src/main/java/com/example/shop/core/global/error/FileNotFoundException.java
package com.example.shop.core.global.error;

public class FileNotFoundException extends InvalidValueException{

    public FileNotFoundException(String value) {
        super(value, ErrorCode.FILE_NOT_FOUND);
    }
}
